kube8s/worker-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: worker
  
  template:
    metadata:
      labels:
        backend: worker
    spec:
      containers:
        - name: worker
          image: sahil555k/workerfib:latest
