kube8s/postgres-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgres-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      backend: postgres-server

  template:
    metadata:
      labels:
        backend: postgres-server
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
      containers:
        - name: postgres-server
          image: postgres:latest         
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
 
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    backend: postgres-server
  ports:
    - port: 5432
      targetPort: 5432
