kube8s/redis-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: redis-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      backend: redis-server

  template:
    metadata:
      labels:
        backend: redis-server
    spec:
      containers:
        - name: redis-server
          image: redis:latest
          ports:
            - containerPort: 6379 
---

apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    backend: redis-server
  ports:
    - port: 6379
      targetPort: 6379
