kube8s/server-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      backend: service
  
  template:
    metadata:
      labels:
        backend: service
        
    
    spec:
      containers:
        - name: server
          image: sahil555k/backend:v1
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    backend: service
  ports:
    - port: 5000
      targetPort: 5000
